--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Paranoids</title>
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/MainMenu.js"></script>
+    <script src="./src/Game.js"></script>
+    <script src="./src/GameOver.js"></script>
+    <script src="./src/Main.js"></script>
 </head>
 <body>
-    
 </body>
 </html>
