credit and updated stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Space Paranoids</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/MainMenu.js"></script>
+    <script src="./src/Credits.js"></script>
     <script src="./src/Projectile.js"></script>   
     <script src="./src/Game.js"></script>
     <script src="./src/GameOver.js"></script>
